infra/k8s-cluster/test/test-echo-client-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy-echo-ip
  namespace: test
spec:
  selector:
    matchLabels:
      run: test-echo-ip
  replicas: 2
  template:
    metadata:
      labels:
        run: test-echo-ip
    spec:
      containers:
        - name: echo-ip
          image: greenstatic/echo-ip
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc-echo-ip
  namespace: test
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: test-echo-ip
