infra/k8s-cluster/test/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx-ingress
  namespace: test
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - host: kube.ecsimsw.com
      http:
        paths:
          - path: /nginx-test
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-svc-clusterip
                port:
                  number: 80
    - host: kube.ecsimsw.com
      http:
        paths:
          - path: /echo-client-ip-test
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-svc-echo-ip
                port:
                  number: 80

#  HOST=$(kubectl get svc --namespace kong kong-gateway-proxy -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
#  PORT=$(kubectl get svc --namespace kong kong-gateway-proxy -o jsonpath='{.spec.ports[0].port}')
#  export PROXY_IP=${HOST}:${PORT}
#  echo $PROXY_IP
#  curl -i -H 'Host:kube.ecsimsw.com' $PROXY_IP/nginx-test
