infra/k8s-cluster/test/test-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-clusterip
  namespace: test
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: test-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-nodeport
  namespace: test
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30123
      protocol: TCP
  selector:
    run: test-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-lb
  namespace: test
  annotations:
    metallb.universe.tf/address-pool: external-ip-pool-1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    run: test-nginx
  type: LoadBalancer

# Service는 파드 재실행 시 ip가 재할당되어 요청 ip에 변화가 생기는 상황을 막는다.
# 지정한 label을 갖는 pod를 묶은 Endpoint를 사이에 두고 pod에 접근할 수 있는 ip를 선언한다.

# Service가 없는 경우 : 클러스터 내부(클러스터 각 모든 노드)에서 POD_CIDR 안에서 할당된 Pod ip로 접근한다.
# Cluster Ip Service : 클러스터 내부에서 공통으로 사용할 수 있는 Cluster Ip가 할당되어 내부에서 해당 Ip로 접근할 수 있도록 한다.
# Node Port Service : 클러스터 각 노드에 공통으로 port를 열어 각 NODE_IP:PORT로 외부에서도 내부 자원에 접글 할 수 있도록 한다.
#                   + Cluster Ip와 마찬가지로 내부의 ClusterIp로 클러스터 내부에서 접근할 수도 있다.
# LoadBalancer Service : 클러스터 외부에서 고유한 IP를 할당받아 해당 IP로 외부에서 내부 자원으로 요청할 수 있도록 한다.
